EK - Second version of the page.

--- a/index.html
+++ b/index.html
@@ -2,49 +2,119 @@
 <html>
     <head>
         
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="frontend/style.css">
     </head>
     <body>
         <h1>Scénarimage de l'application Curriculum Analitica</h1>
         <div id="screens">
             <div class="screen">
-                <img src="./assets/IMG_3983.png" alt="step 1">
+                <img src="./assets/step1.png" alt="step 1">
                 <p>
                     <h2>Étape 1</h2>
                     <span>
                         <p class="explications">
-                            Lorem ipsum dolor sit amet. Eos animi vero et dolore enim qui aliquid dolor sed magnam provident. 
-                            Quo placeat tempore quo molestiae velit et voluptatem atque ad rerum beatae est quas quas ad excepturi maiores est nobis error. 
-                            Eos odit dolores aut aliquam commodi aut voluptatum nihil in modi mollitia qui veritatis aliquid sit aliquid voluptas. 
-                            Qui suscipit consequatur qui possimus dolorem quo debitis omnis. </p><p>Et quidem incidunt eum placeat voluptas ut aliquid porro et 
-                            recusandae asperiores et iusto ipsam eum neque commodi. Non dolor architecto et dolores possimus cum dicta possimus et autem possimus. 
-                            Sit enim sint et adipisci fugiat ex voluptatem autem! </p><p>Est eligendi molestias et minima minima et voluptatem maiores eos similique provident. 
-                            Ex quia officia At corrupti voluptate qui eaque omnis qui voluptate fuga ab explicabo dolor et corrupti consequuntur! Sit dolores molestias et 
-                            rerum ratione sit ipsa internos qui impedit Quis qui odio quaerat hic minima aliquid id laudantium delectus. Id officia totam At fugit illo aut officia 
-                            corporis.
+                            Alternative texte for the step.
                         </p>
                     </span>
                 </p>
             </div>
             <div class="screen">
-                <img src="./assets/IMG_3983.png" alt="step 2">
+                <img src="./assets/step2.png" alt="step 2">
                 <p>
                     <h2>Étape 2</h2>
-                    <span>...</span>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
                 </p>
             </div>
             <div class="screen">
-                <img src="./assets/IMG_3983.png" alt="step 3">
+                <img src="./assets/step3.png" alt="step 3">
                 <p>
                     <h2>Étape 3</h2>
-                    <span>...</span>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
                 </p>
             </div>
             <div class="screen">
-                <img src="./assets/IMG_3983.png" alt="step 4">
+                <img src="./assets/step4.png" alt="step 4">
                 <p>
                     <h2>Étape 4</h2>
-                    <span>...</span>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
+                </p>
+            </div>
+            <div class="screen">
+                <img src="./assets/step5.png" alt="step 5">
+                <p>
+                    <h2>Étape 5</h2>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
+                </p>
+            </div>
+            <div class="screen">
+                <img src="./assets/step6.png" alt="step 6">
+                <p>
+                    <h2>Étape 6</h2>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
+                </p>
+            </div>
+            <div class="screen">
+                <img src="./assets/step7.png" alt="step 7">
+                <p>
+                    <h2>Étape 7</h2>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
+                </p>
+            </div>
+            <div class="screen">
+                <img src="./assets/step8.png" alt="step 8">
+                <p>
+                    <h2>Étape 8</h2>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
+                </p>
+            </div>
+            <div class="screen">
+                <img src="./assets/step9.png" alt="step 9">
+                <p>
+                    <h2>Étape 9</h2>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
+                </p>
+            </div>
+            <div class="screen">
+                <img src="./assets/step10.png" alt="step 10">
+                <p>
+                    <h2>Étape 10</h2>
+                    <span>
+                        <p class="explications">
+                            Alternative texte for the step.
+                        </p>
+                    </span>
                 </p>
             </div>
         </div>
@@ -56,6 +126,6 @@
                 <img id="overlay-img" src="" alt="Image agrandie">
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="frontend/script.js"></script>
     </body>
 </html>
