EK - Forgot to maintain the references to the frontend directory

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
-        <link rel="stylesheet" href="frontend/style.css">
+        <title>Scénarimage de Curriculum Analitica</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Scénarimage de l'application Curriculum Analitica</h1>
@@ -126,6 +126,6 @@
                 <img id="overlay-img" src="" alt="Image agrandie">
             </div>
         </div>
-        <script src="frontend/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
