Third version of the page.

--- a/index.html
+++ b/index.html
@@ -9,113 +9,138 @@
         <div id="screens">
             <div class="screen">
                 <img src="./assets/step1.png" alt="step 1">
-                <p>
+                <div>
                     <h2>Étape 1</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3> Page de connexion.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Saisie des identifiants de Polytechnique du Dr. Alain Fournier. Clic sur le bouton "Se connecter".
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step2.png" alt="step 2">
-                <p>
+                <div>
                     <h2>Étape 2</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3> Tableau de bord.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1. Clic sur le bouton "Voir la paire".
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step3.png" alt="step 3">
-                <p>
+                <div>
                     <h2>Étape 3</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3> 
+                        Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> Programme : Génie mécanique - Détails du chevauchement.
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Clic sur le libellé "Concepts-clefs".
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step4.png" alt="step 4">
-                <p>
+                <div>
                     <h2>Étape 4</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3>
+                        <span>Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> 
+                            Programme : Génie mécanique - Détails du chevauchement -> 
+                            Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours.</span>
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Clic sur le bouton "Exporter le rapport de redondance".
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step5.png" alt="step 5">
-                <p>
+                <div>
                     <h2>Étape 5</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3>
+                        <span>
+                            Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> 
+                            Programme : Génie mécanique - Détails du chevauchement -> 
+                            Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours -> 
+                            Rapport de redondance généré avec succès.
+                        </span>
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                        Clic sur le bouton "Revenir au tableau de bord".
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step6.png" alt="step 6">
-                <p>
+                <div>
                     <h2>Étape 6</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3>
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step7.png" alt="step 7">
-                <p>
+                <div>
                     <h2>Étape 7</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3>
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step8.png" alt="step 8">
-                <p>
+                <div>
                     <h2>Étape 8</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3>
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step9.png" alt="step 9">
-                <p>
+                <div>
                     <h2>Étape 9</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3>
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                    </p>
+                </div>
             </div>
             <div class="screen">
                 <img src="./assets/step10.png" alt="step 10">
-                <p>
+                <div>
                     <h2>Étape 10</h2>
-                    <span>
-                        <p class="explications">
-                            Alternative texte for the step.
-                        </p>
-                    </span>
-                </p>
+                    <p class="page">
+                        <h3>Page : </h3>
+                    </p>
+                    <p class="action">
+                        <h3>Action : </h3>
+                    </p>
+                </div>
             </div>
         </div>
 
