--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </p>
                 </div>
             </div>
-            <div class="screen">
+            <div class="screen hidden">
                 <img src="./assets/step6.png" alt="step 6">
                 <div>
                     <h2>Étape 6</h2>
@@ -95,7 +95,7 @@
                     </p>
                 </div>
             </div>
-            <div class="screen">
+            <div class="screen hidden">
                 <img src="./assets/step7.png" alt="step 7">
                 <div>
                     <h2>Étape 7</h2>
@@ -107,7 +107,7 @@
                     </p>
                 </div>
             </div>
-            <div class="screen">
+            <div class="screen hidden">
                 <img src="./assets/step8.png" alt="step 8">
                 <div>
                     <h2>Étape 8</h2>
@@ -119,7 +119,7 @@
                     </p>
                 </div>
             </div>
-            <div class="screen">
+            <div class="screen hidden">
                 <img src="./assets/step9.png" alt="step 9">
                 <div>
                     <h2>Étape 9</h2>
@@ -131,7 +131,7 @@
                     </p>
                 </div>
             </div>
-            <div class="screen">
+            <div class="screen hidden">
                 <img src="./assets/step10.png" alt="step 10">
                 <div>
                     <h2>Étape 10</h2>
