EK - Hide unused things on the HTML page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Scénarimage de Curriculum Analitica</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="print.css">
+        <link rel="stylesheet" href="print.css" media="print">
     </head>
     <body>
         <h1>Scénarimage de l'application Curriculum Analitica</h1>
