EK - Fourth version of the page.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <h1>Scénarimage de l'application Curriculum Analitica</h1>
         <div id="screens">
             <div class="screen">
-                <img src="./assets/step1.png" alt="step 1">
+                <div class="task-label">Tâche initiale pour accéder à CA</div>
+                <img src="./assets/step1.png" alt="step 1" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 1</h2>
                     <p class="page">
@@ -22,7 +23,8 @@
                 </div>
             </div>
             <div class="screen">
-                <img src="./assets/step2.png" alt="step 2">
+                <div class="task-label">Tâche #1</div>
+                <img src="./assets/step2.png" alt="step 2" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 2</h2>
                     <p class="page">
@@ -35,21 +37,29 @@
                 </div>
             </div>
             <div class="screen">
-                <img src="./assets/step3.png" alt="step 3">
+                <div class="task-label">Tâche #1 & Tâche #2</div>
+                <img src="./assets/step3.png" alt="step 3" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 3</h2>
                     <p class="page">
-                        <h3>Page : </h3> 
+                        <h3>Page : </h3>
                         Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> Programme : Génie mécanique - Détails du chevauchement.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Clic sur le libellé "Concepts-clefs".
+                        Clic sur le lien "Systèmes de poutres".
                     </p>
                 </div>
             </div>
             <div class="screen">
-                <img src="./assets/step4.png" alt="step 4">
+                <div class="task-label">Tâche #2</div>
+                <img src="./assets/step4.png" alt="step 4" onerror="this.style.display='none';">
+                <span class="note">
+                    Note : les descriptions des plans de cours ont été générées par l'IA étant donné que les cours de Polytechnique
+                    <a href="https://www.polymtl.ca/programmes/cours/resistance-des-materiaux-ii" target="_blank">MEC-2405</a> et 
+                    <a href="https://www.polymtl.ca/programmes/cours/recherche/MEC3420?" target="_blank">MEC-3420</a> ne contiennent pas les concepts-clefs abordés dans le document CAI.
+                    La conversation avec Gemini peut être retrouvée <a href="https://gemini.google.com/app/b012d74ed7f1a152" target="_blank">ici</a>.
+                </span>
                 <div>
                     <h2>Étape 4</h2>
                     <p class="page">
@@ -60,12 +70,13 @@
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Clic sur le bouton "Exporter le rapport de redondance".
+                        Clic sur le bouton "Modéliser l'optimisation".
                     </p>
                 </div>
             </div>
             <div class="screen">
-                <img src="./assets/step5.png" alt="step 5">
+                <div class="task-label">Tâche #3</div>
+                <img src="./assets/step5.png" alt="step 5" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 5</h2>
                     <p class="page">
@@ -73,30 +84,37 @@
                         <span>
                             Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> 
                             Programme : Génie mécanique - Détails du chevauchement -> 
-                            Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours -> 
-                            Rapport de redondance généré avec succès.
+                            Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours
+                            -> Modélisation de la refonte.
                         </span>
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
-                        Clic sur le bouton "Revenir au tableau de bord".
+                        Clic sur le bouton "Modifier le scénario".
                     </p>
                 </div>
             </div>
-            <div class="screen hidden">
-                <img src="./assets/step6.png" alt="step 6">
+            <div class="screen">
+                <div class="task-label">Tâche #3</div>
+                <img src="./assets/step6.png" alt="step 6" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 6</h2>
                     <p class="page">
                         <h3>Page : </h3>
+                        Tableau de bord -> Alertes de Chevauchement Principaux -> Alerte 1 -> 
+                        Programme : Génie mécanique - Détails du chevauchement -> 
+                        Programme : Génie mécanique - Détails du chevauchement - Extraits de plan de cours ->
+                        Modélisation de la refonte. -> Rappot généré avec succès.
                     </p>
                     <p class="action">
                         <h3>Action : </h3>
+                        Clic sur le bouton "Envoyer par courriel".
                     </p>
                 </div>
             </div>
             <div class="screen hidden">
-                <img src="./assets/step7.png" alt="step 7">
+                <div class="task-label">Tâche #?</div>
+                <img src="./assets/step7.png" alt="step 7" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 7</h2>
                     <p class="page">
@@ -108,7 +126,8 @@
                 </div>
             </div>
             <div class="screen hidden">
-                <img src="./assets/step8.png" alt="step 8">
+                <div class="task-label">Tâche #?</div>
+                <img src="./assets/step8.png" alt="step 8" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 8</h2>
                     <p class="page">
@@ -120,7 +139,8 @@
                 </div>
             </div>
             <div class="screen hidden">
-                <img src="./assets/step9.png" alt="step 9">
+                <div class="task-label">Tâche #?</div>
+                <img src="./assets/step9.png" alt="step 9" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 9</h2>
                     <p class="page">
@@ -132,7 +152,8 @@
                 </div>
             </div>
             <div class="screen hidden">
-                <img src="./assets/step10.png" alt="step 10">
+                <div class="task-label">Tâche #?</div>
+                <img src="./assets/step10.png" alt="step 10" onerror="this.style.display='none';">
                 <div>
                     <h2>Étape 10</h2>
                     <p class="page">
@@ -144,6 +165,12 @@
                 </div>
             </div>
         </div>
+
+        <footer>
+            <p>Scénarimage fait dans le cadre du TP2 pour l'application Curriculum Analitica du cours 
+                <a href="https://www.polymtl.ca/programmes/cours/anal-et-conc-des-interfaces-utilisateurs" target="_blank">LOG2420 à Polytechnique Montréal</a> - A2025.</p>
+            <p>&copy; Kassas Elias, Benaiche Djihed, Abderrahim Leith Ethan, Cipcigan Raul</p>
+        </footer>
 
         <!-- Fenêtre modale -->
         <div id="overlay">
