EK - correction of index.html. Added phone.css and tablet.css to make the page more responsive just in case.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <title>Scénarimage de Curriculum Analitica</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="print.css" media="print">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/print.css" media="print">
+        <link rel="stylesheet" href="./css/phone.css" media="(max-width: 768px)">
+        <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 768px) and (max-width: 1024px)">
     </head>
     <body>
         <h1>Scénarimage de l'application Curriculum Analitica</h1>
         <div id="screens">
             <div class="screen">
                 <div class="task-label">Tâche initiale pour accéder à CA</div>
-                <img src="./assets/step1.png" alt="step 1" onerror="this.style.display='none';">
+                <img src="./assets/step1.png" alt="step 1" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 1</h2>
                     <p class="page">
@@ -24,7 +26,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #1</div>
-                <img src="./assets/step2.png" alt="step 2" onerror="this.style.display='none';">
+                <img src="./assets/step2.png" alt="step 2" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 2</h2>
                     <p class="page">
@@ -38,7 +40,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #1 & Tâche #2</div>
-                <img src="./assets/step3.png" alt="step 3" onerror="this.style.display='none';">
+                <img src="./assets/step3.png" alt="step 3" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 3</h2>
                     <p class="page">
@@ -53,7 +55,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #2</div>
-                <img src="./assets/step4.png" alt="step 4" onerror="this.style.display='none';">
+                <img src="./assets/step4.png" alt="step 4" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <span class="note">
                     Note : les descriptions des plans de cours ont été générées par l'IA étant donné que les cours de Polytechnique
                     <a href="https://www.polymtl.ca/programmes/cours/resistance-des-materiaux-ii" target="_blank">MEC-2405</a> et 
@@ -76,7 +78,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
-                <img src="./assets/step5.png" alt="step 5" onerror="this.style.display='none';">
+                <img src="./assets/step5.png" alt="step 5" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 5</h2>
                     <p class="page">
@@ -96,7 +98,7 @@
             </div>
             <div class="screen">
                 <div class="task-label">Tâche #3</div>
-                <img src="./assets/step6.png" alt="step 6" onerror="this.style.display='none';">
+                <img src="./assets/step6.png" alt="step 6" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 6</h2>
                     <p class="page">
@@ -114,7 +116,7 @@
             </div>
             <div class="screen hidden">
                 <div class="task-label">Tâche #?</div>
-                <img src="./assets/step7.png" alt="step 7" onerror="this.style.display='none';">
+                <img src="./assets/step7.png" alt="step 7" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 7</h2>
                     <p class="page">
@@ -127,7 +129,7 @@
             </div>
             <div class="screen hidden">
                 <div class="task-label">Tâche #?</div>
-                <img src="./assets/step8.png" alt="step 8" onerror="this.style.display='none';">
+                <img src="./assets/step8.png" alt="step 8" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 8</h2>
                     <p class="page">
@@ -140,7 +142,7 @@
             </div>
             <div class="screen hidden">
                 <div class="task-label">Tâche #?</div>
-                <img src="./assets/step9.png" alt="step 9" onerror="this.style.display='none';">
+                <img src="./assets/step9.png" alt="step 9" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 9</h2>
                     <p class="page">
@@ -153,7 +155,7 @@
             </div>
             <div class="screen hidden">
                 <div class="task-label">Tâche #?</div>
-                <img src="./assets/step10.png" alt="step 10" onerror="this.style.display='none';">
+                <img src="./assets/step10.png" alt="step 10" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <div>
                     <h2>Étape 10</h2>
                     <p class="page">
