EK - The interactivity with the page has been enhanced.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="task-label">Tâche #2</div>
                 <img src="./assets/step4.png" alt="step 4" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
                 <span class="note">
-                    Note : les descriptions des plans de cours ont été générées par l'IA étant donné que les cours de Polytechnique
+                    Note : Les descriptions des plans de cours ont été générées par l'IA étant donné que les cours de Polytechnique
                     <a href="https://www.polymtl.ca/programmes/cours/resistance-des-materiaux-ii" target="_blank">MEC-2405</a> et 
                     <a href="https://www.polymtl.ca/programmes/cours/recherche/MEC3420?" target="_blank">MEC-3420</a> ne contiennent pas les concepts-clefs abordés dans le document CAI.
                     La conversation avec Gemini peut être retrouvée <a href="https://gemini.google.com/app/b012d74ed7f1a152" target="_blank">ici</a>.
@@ -111,58 +111,6 @@
                     <p class="action">
                         <h3>Action : </h3>
                         Clic sur le bouton "Envoyer par courriel".
-                    </p>
-                </div>
-            </div>
-            <div class="screen hidden">
-                <div class="task-label">Tâche #?</div>
-                <img src="./assets/step7.png" alt="step 7" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
-                <div>
-                    <h2>Étape 7</h2>
-                    <p class="page">
-                        <h3>Page : </h3>
-                    </p>
-                    <p class="action">
-                        <h3>Action : </h3>
-                    </p>
-                </div>
-            </div>
-            <div class="screen hidden">
-                <div class="task-label">Tâche #?</div>
-                <img src="./assets/step8.png" alt="step 8" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
-                <div>
-                    <h2>Étape 8</h2>
-                    <p class="page">
-                        <h3>Page : </h3>
-                    </p>
-                    <p class="action">
-                        <h3>Action : </h3>
-                    </p>
-                </div>
-            </div>
-            <div class="screen hidden">
-                <div class="task-label">Tâche #?</div>
-                <img src="./assets/step9.png" alt="step 9" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
-                <div>
-                    <h2>Étape 9</h2>
-                    <p class="page">
-                        <h3>Page : </h3>
-                    </p>
-                    <p class="action">
-                        <h3>Action : </h3>
-                    </p>
-                </div>
-            </div>
-            <div class="screen hidden">
-                <div class="task-label">Tâche #?</div>
-                <img src="./assets/step10.png" alt="step 10" onerror="this.src='./assets/placeholder.png'; this.onerror=null;">
-                <div>
-                    <h2>Étape 10</h2>
-                    <p class="page">
-                        <h3>Page : </h3>
-                    </p>
-                    <p class="action">
-                        <h3>Action : </h3>
                     </p>
                 </div>
             </div>
